add mass deactivating team members and reassign reviews after user deactivates. add env file and fix bugs
