# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.PullRequestShort"
+                            "$ref": "#/definitions/dto.PullRequestQuery"
                         }
                     }
                 ],
@@ -346,6 +346,58 @@
                 }
             }
         },
+        "/team/kill": {
+            "post": {
+                "description": "set users status to not active by a given team name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "teams"
+                ],
+                "summary": "deactivate all users in team",
+                "parameters": [
+                    {
+                        "description": "team_name",
+                        "name": "team_name",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.TeamName"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Team"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users/getReview": {
             "get": {
                 "consumes": [
@@ -535,6 +587,20 @@
                 }
             }
         },
+        "dto.PullRequestQuery": {
+            "type": "object",
+            "properties": {
+                "author_id": {
+                    "type": "string"
+                },
+                "pull_request_id": {
+                    "type": "string"
+                },
+                "pull_request_name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.StatusQuery": {
             "type": "object",
             "properties": {
@@ -542,6 +608,14 @@
                     "type": "boolean"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.TeamName": {
+            "type": "object",
+            "properties": {
+                "team_name": {
                     "type": "string"
                 }
             }
