# internal/adapter/in/http/dto/create_pr_query.go
@@ -1,0 +1,7 @@
+package dto
+
+type PullRequestQuery struct {
+	PullRequestId   string `json:"pull_request_id"`
+	PullRequestName string `json:"pull_request_name"`
+	AuthorId        string `json:"author_id"`
+}
